src/pages/Dashboard/Dashboard.css
.dashboard {
  min-height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 20px;
}

.dashboard .side-bar {
  position: relative;
  width: 250px;
  background-color: var(--white);
  padding: 20px;
}

.dashboard .side-bar .links-wrapper h3 {
  color: #94a7cb;
  font-size: 12px;
}

.dashboard .side-bar .links-wrapper ul {
  margin: 15px 0 25px;
}

.dashboard .side-bar .links-wrapper ul li {
  color: var(--secondary-light-300);
  font-size: 16px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  border-radius: 10px;
  padding: 10px;
  cursor: pointer;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  margin-bottom: 10px;
}

.dashboard .side-bar .links-wrapper ul li:hover {
  background-color: var(--primary-default-100);
  color: var(--primary-default-500);
}

.dashboard .side-bar .links-wrapper ul li.active {
  background-color: var(--primary-default-500);
  color: var(--white);
}

.dashboard .side-bar .links-wrapper .icons {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f6f7f9;
  border-radius: 100%;
  padding: 5px;
}

.dashboard .side-bar .links-wrapper .icons div {
  color: var(--white);
  padding: 5px;
  border-radius: 50%;
}

.dashboard .side-bar .links-wrapper .icons div.active {
  background-color: var(--primary-default-500);
}

.dashboard .side-bar .links-wrapper .icons svg {
  color: var(--secondary-light-300);
}

.dashboard .side-bar .links-wrapper .icons div.active {
  color: var(--primary-default-500);
}

.dashboard .side-bar .log-out {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
  color: var(--secondary-light-300);
  font-size: 16px;
  cursor: pointer;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
}

.dashboard .side-bar .log-out:hover {
  color: var(--primary-default-500);
}

@media (max-width: 991px) {
  .dashboard {
    display: block;
  }

  .dashboard .side-bar {
    display: none;
  }
}

/* Start Dashboard Styles */

.dashboard .container {
  margin-top: 40px;
  margin-bottom: 40px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 20px;
}

@media (max-width: 768px) {
  .dashboard .container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.dashboard .container .rental-details,
.dashboard .container .top-cars {
  width: 100%;
}

.dashboard .container .rental-details {
  background-color: var(--white);
  padding: 20px;
}

.dashboard .container .rental-details,
.dashboard .container .top-cars {
  border-radius: 10px;
}

.dashboard .container .rental-details .header {
  margin-bottom: 10px;
}

.dashboard .container .rental-details .header h3 {
  margin-bottom: 10px;
  font-size: 16px;
}

.dashboard .rental-details .car {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 20px;
  margin: 20px 0;
}

.dashboard .rental-details .car .car-info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 20px;
}

.dashboard .rental-details .car h3 {
  white-space: nowrap;
  font-size: 16px;
}
.dashboard .rental-details .car p {
  white-space: nowrap;
}

.dashboard .rental-details .car .img-wrapper {
  position: relative;
  width: 200px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-image: url("../../assets/bg1.png");
  background-position: center;
  padding: 10px;
}

.dashboard .rental-details .car .img-wrapper::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  background-color: var(--primary-default-500);
  border-radius: 10px;
}

@media (max-width: 768px) {
  .dashboard .rental-details .car .img-wrapper {
    width: 100px;
  }
}

.dashboard .rental-details .car .img-wrapper img {
  position: relative;
  z-index: 100;
}

.dashboard .rental-details .rental-info .pick-up,
.dashboard .rental-details .rental-info .drop-off {
  margin: 10px 0;
}

.dashboard .rental-details .input-parent {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 20px;
}

.dashboard .container .top-cars .top-five,
.dashboard .container .top-cars .recent-transactions {
  background-color: var(--white);
  padding: 20px;
  border-radius: 10px;
}

.dashboard .container .top-cars .header {
  margin-bottom: 10px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.dashboard .container .top-cars .header h3 {
  font-size: 16px;
}

.dashboard .container .top-cars .chart {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
  margin: 20px 0;
}

@media (max-width: 1200px) {
  .dashboard .container .top-cars .chart {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.dashboard .container .top-cars .chart .chart-graph {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 200px;
}

.dashboard .container .top-cars .chart .chart-graph::before {
  content: "72,234";
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 24px;
  font-weight: 600;
}

.dashboard .container .top-cars .chart .chart-graph::after {
  content: "Rental Car";
  position: absolute;
  top: 60%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 12px;
  color: var(--secondary-light-300);
}

@media (max-width: 1200px) {
  .dashboard .container .top-cars .chart .chart-graph::before {
    font-size: 18px;
  }
  .dashboard .container .top-cars .chart .chart-graph::after {
    font-size: 12px;
  }
}

.dashboard .container .top-cars .chart .chart-graph img {
  width: 250px;
}

.dashboard .container .top-cars .chart .chart-info {
  width: 100%;
}

.dashboard .container .top-cars .chart .chart-info ul li {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 5px;
}

.dashboard .container .top-cars .chart .chart-info ul li p {
  font-size: 12px;
}

.dashboard .container .top-cars .chart .chart-info ul li span {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  display: inline-block;
  margin-right: 5px;
}

.dashboard .container .top-cars .chart .chart-info ul li span.color1 {
  background-color: #0d3559;
}
.dashboard .container .top-cars .chart .chart-info ul li span.color2 {
  background-color: #175d9c;
}
.dashboard .container .top-cars .chart .chart-info ul li span.color3 {
  background-color: #2185de;
}
.dashboard .container .top-cars .chart .chart-info ul li span.color4 {
  background-color: #63a9e8;
}
.dashboard .container .top-cars .chart .chart-info ul li span.color5 {
  background-color: #a6cef2;
}

.dashboard .container .top-cars .recent-transactions {
  margin: 20px 0;
}

.dashboard .container .top-cars .recent-transactions .header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 10px;
}

.dashboard .container .top-cars .recent-transactions .header h3 {
  font-size: 18px;
}
.dashboard .container .top-cars .recent-transactions .header p {
  font-size: 14px;
  color: var(--primary-default-500);
}

.dashboard .container .top-cars .recent-transactions .car {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  text-align: center;
  gap: 20px;
  margin: 20px 0;
}
.dashboard .container .top-cars .recent-transactions .car .img-wrapper {
  width: 100px;
  height: 100%;
}

.dashboard .container .top-cars .recent-transactions .car .price p,
.dashboard .container .top-cars .recent-transactions .car .car-info p {
  color: var(--secondary-light-300);
  font-size: 14px;
}

